# ex3

./: CMakeLists.txt  Command.h  CommandTypes.cpp  CommandTypes.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  DefineVarCommand.cpp  DefineVarCommand.h  Expression.h  IfCommand.cpp  IfCommand.h  Interpreter.cpp  Interpreter.h  OpenServerCommand.cpp  OpenServerCommand.h  Parser.cpp  Parser.h  PrintCommand.cpp  PrintCommand.h  README.md  Singleton.cpp  Singleton.h  SleepCommand.cpp  SleepCommand.h  Var.cpp  Var.h  WhileCommand.cpp  WhileCommand.h  main.cpp
